--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
+    "slick-carousel": "^1.8.1",
     "yarn": "^1.13.0"
   }
 }
