--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "hover-dir": "^1.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "slick-carousel": "^1.8.1",
